force-app/main/default/objects/Twilio_SMS_Settings__mdt/Twilio_SMS_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Twilio SMS Settings used to map Sender and Recipient(CEO) phone number mapping</description>
    <label>Twilio SMS Settings</label>
    <pluralLabel>Twilio SMS Settings</pluralLabel>
</CustomObject>