force-app/main/default/objects/Twilio_SMS_Settings__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to deactivate the SMS functionality</description>
    <inlineHelpText>Used to deactivate the SMS functionality</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>