force-app/main/default/objects/Twilio_SMS_Settings__mdt/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <description>sender Phone number, copied from Twilio console app settings</description>
    <inlineHelpText>sender Phone number, copied from Twilio console app settings</inlineHelpText>
    <label>From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>