force-app/main/default/objects/Twilio_SMS_Settings__mdt/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <description>Used to store CEO Phone Number</description>
    <inlineHelpText>Used to store CEO Phone Number</inlineHelpText>
    <label>To</label>
    <length>15</length>
    <type>Text</type>
</CustomField>